# aoc24

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
aoc/: day1.py  day2.py  day3.py  day4.py  day5.py
