[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["3n3a <46775561+3n3a@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^2.0.4"
regex = "^2024.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
